--- a/.gitignore
+++ b/.gitignore
@@ -3,16 +3,12 @@ __pycache__/
 *.pyc
 *.pyo
 *.pyd
-*.sqlite3
+# *.sqlite3
 # db.sqlite3
 .venv/
 # .env
 
-# Django
-/static/
-/media/
-/backend/static/
-/backend/media/
+
 
 # Node
 node_modules/
