--- a/.gitignore
+++ b/.gitignore
@@ -10,10 +10,10 @@ __pycache__/
 
 
 
-# Node
-node_modules/
-frontend/dist/
-frontend/.vite/
+# # Node
+# node_modules/
+# frontend/dist/
+# frontend/.vite/
 
 # Docker
 *.log
@@ -24,3 +24,30 @@ docker-compose.override.yml
 # IDEs
 .vscode/
 .idea/
+
+
+##
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+
+node_modules
+dist
+dist-ssr
+*.local
+
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
+.DS_Store
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
