--- a/.gitignore
+++ b/.gitignore
@@ -3,11 +3,18 @@ __pycache__/
 *.pyc
 *.pyo
 *.pyd
+*.sqlite3
+*.log
 
 .venv/
 # .env
 backend/.venv/
 
+
+# ---- Django ----
+db.sqlite3
+media/
+staticfiles/
 
 # # Node
 # node_modules/
@@ -23,6 +30,11 @@ docker-compose.override.yml
 # IDEs
 .vscode/
 .idea/
+
+# ---- Environment ----
+.env
+*.env
+
 
 
 ##
@@ -50,3 +62,23 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+
+# ---- Ignore management commands ----
+backend/travel/management/commands/*.py
+!backend/travel/management/commands/__init__.py   # keep package marker
+backend/import_data.py
+backend/seed_demo.py
+
+# ---- Other ----
+*.DS_Store
+
+
+# ---- Docker ----
+*.pid
+*.sock
+*.tmp
+
+# ---- Optional: Ignore migrations ----
+# backend/travel/migrations/*.py
+# !backend/travel/migrations/__init__.py
