--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
     "clsx": "^2.1.1",
     "form": "^0.2.5",
     "input": "^1.0.1",
+    "lottie-react": "^2.4.1",
     "lucide-react": "^0.542.0",
     "motion": "^12.23.12",
     "next-themes": "^0.4.6",
