--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,9 +1,29 @@
 asgiref==3.9.1
+certifi==2025.8.3
+charset-normalizer==3.4.3
+cloudinary==1.44.1
+dj-database-url==3.0.1
 Django==5.2.4
+django-cloudinary-storage==0.3.0
+django-cors-headers==4.8.0
+django-nested-admin==4.1.4
 djangorestframework==3.16.1
+djangorestframework-orjson==0.1.3
 djangorestframework_simplejwt==5.5.1
+gunicorn==23.0.0
+idna==3.10
+joblib==1.5.2
+numpy==2.3.3
+orjson==3.11.3
+packaging==25.0
 pillow==11.3.0
+psycopg2-binary==2.9.10
 PyJWT==2.10.1
+python-monkey-business==1.1.0
+requests==2.32.5
+scikit-learn==1.7.2
+scipy==1.16.2
+six==1.17.0
 sqlparse==0.5.3
-gunicorn
-django-cors-headers
+threadpoolctl==3.6.0
+urllib3==2.5.0
