--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,29 +1,54 @@
+amqp==5.3.1
 asgiref==3.9.1
+billiard==4.2.2
+celery==5.5.3
 certifi==2025.8.3
 charset-normalizer==3.4.3
+click==8.3.0
+click-didyoumean==0.3.1
+click-plugins==1.1.1.2
+click-repl==0.3.0
 cloudinary==1.44.1
+cron_descriptor==2.0.6
 dj-database-url==3.0.1
 Django==5.2.4
+django-celery-beat==2.8.1
 django-cloudinary-storage==0.3.0
 django-cors-headers==4.8.0
 django-nested-admin==4.1.4
+django-timezone-field==7.1
+django_celery_results==2.6.0
 djangorestframework==3.16.1
 djangorestframework-orjson==0.1.3
 djangorestframework_simplejwt==5.5.1
+flower==2.0.1
 gunicorn==23.0.0
+humanize==4.13.0
 idna==3.10
 joblib==1.5.2
+kombu==5.5.4
 numpy==2.3.3
 orjson==3.11.3
 packaging==25.0
 pillow==11.3.0
+prometheus_client==0.23.1
+prompt_toolkit==3.0.52
 psycopg2-binary==2.9.10
 PyJWT==2.10.1
+python-crontab==3.3.0
+python-dateutil==2.9.0.post0
 python-monkey-business==1.1.0
+pytz==2025.2
+redis==5.2.1
 requests==2.32.5
 scikit-learn==1.7.2
 scipy==1.16.2
 six==1.17.0
 sqlparse==0.5.3
 threadpoolctl==3.6.0
+tornado==6.5.2
+typing_extensions==4.15.0
+tzdata==2025.2
 urllib3==2.5.0
+vine==5.1.0
+wcwidth==0.2.14
