--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,66 @@
-version: "3.9"
+
+
 services:
   backend:
     build: ./backend
-    container_name: travista_backend
+    container_name: twigle_backend
+    command: gunicorn travelplanner.wsgi:application --bind 0.0.0.0:8000 --workers 3
+    # command: python manage.py runserver 0.0.0.0:8000
+    # command: gunicorn travelplanner.wsgi:application --bind 0.0.0.0:8000 --workers 3 --reload
+
+    environment:
+      DJANGO_ROLE: backend
     volumes:
+      - ./backend:/app   # mount backend code for live development
       - static_data:/app/static
       - media_data:/app/media
     env_file: ./backend/.env
+    depends_on:
+      - redis
     expose:
       - "8000"
 
+  celery:
+    build: ./backend
+    container_name: twigle_celery
+    command: celery -A travelplanner worker -l info
+    # command: celery -A travelplanner worker -l info --autoreload
+    environment:
+      DJANGO_ROLE: celery
+    volumes:
+      - ./backend:/app
+      - static_data:/app/static
+      - media_data:/app/media
+    env_file: ./backend/.env
+    depends_on:
+      - redis
+      - backend
+
+  celery_beat:
+    build: ./backend
+    container_name: twigle_celery_beat
+    command: celery -A travelplanner beat -l info --scheduler django_celery_beat.schedulers:DatabaseScheduler
+    # command: celery -A travelplanner beat -l info --scheduler django_celery_beat.schedulers:DatabaseScheduler --autoreload
+    environment:
+      DJANGO_ROLE: celery_beat
+    volumes:
+      - ./backend:/app
+      - static_data:/app/static
+      - media_data:/app/media
+    env_file: ./backend/.env
+    depends_on:
+      - redis
+      - backend
+
+  redis:
+    image: redis:7-alpine
+    container_name: twigle_redis
+    restart: always
+    command: redis-server --save "" --appendonly no
+
   nginx:
-    build: ./frontend   
-    container_name: travista_nginx
+    build: ./frontend
+    container_name: twigle_nginx
     ports:
       - "80:80"
     depends_on:
@@ -20,6 +68,20 @@ services:
     volumes:
       - static_data:/app/static
       - media_data:/app/media
+
+  flower:
+    build: ./backend
+    container_name: twigle_flower
+    command: celery -A travelplanner flower --broker=redis://redis:6379/0 --port=5555 --basic_auth=admin:admin
+    volumes:
+      - ./backend:/app
+    env_file: ./backend/.env
+    ports:
+      - "5555:5555"
+    depends_on:
+      - redis
+      - celery
+      - backend
 
 volumes:
   static_data:
