--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,7 +20,9 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-tooltip": "^1.2.8",
-    "@tabler/icons-react": "^3.34.1",
+    "@react-three/drei": "^10.7.6",
+    "@react-three/fiber": "^9.3.0",
+    "@tabler/icons-react": "^3.35.0",
     "@tailwindcss/vite": "^4.1.12",
     "axios": "^1.12.2",
     "button": "^1.1.1",
@@ -31,7 +33,7 @@
     "input": "^1.0.1",
     "lottie-react": "^2.4.1",
     "lucide-react": "^0.542.0",
-    "motion": "^12.23.12",
+    "motion": "^12.23.24",
     "next-themes": "^0.4.6",
     "react": "^19.1.1",
     "react-day-picker": "^9.11.0",
@@ -42,6 +44,8 @@
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.12",
+    "three": "^0.180.0",
+    "three-globe": "^2.44.1",
     "toast": "^0.5.4",
     "zod": "^4.1.7"
   },
