--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ services:
       - ./backend:/app   # mount backend code for live development
       - static_data:/app/static
       - media_data:/app/media
-    # env_file: ./backend/.env
+    env_file: ./backend/.env
     depends_on:
       - redis
     expose:
@@ -31,7 +31,7 @@ services:
       - ./backend:/app
       - static_data:/app/static
       - media_data:/app/media
-    # env_file: ./backend/.env
+    env_file: ./backend/.env
     depends_on:
       - redis
       - backend
@@ -47,7 +47,7 @@ services:
       - ./backend:/app
       - static_data:/app/static
       - media_data:/app/media
-    # env_file: ./backend/.env
+    env_file: ./backend/.env
     depends_on:
       - redis
       - backend
@@ -75,7 +75,7 @@ services:
     command: celery -A travelplanner flower --broker=redis://redis:6379/0 --port=5555 --basic_auth=admin:admin
     volumes:
       - ./backend:/app
-    # env_file: ./backend/.env
+    env_file: ./backend/.env
     ports:
       - "5555:5555"
     depends_on:
